--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\hero-img.png"
+      href="hero-img.png"
     />
     <link
       rel="stylesheet"
-      href="C:\Users\Axel Remojo\Desktop\portfolio ni axel\css\style.css"
+      href="style.css"
     />
   </head>
   <body>
@@ -66,7 +66,7 @@
 
         <div class="hero-image">
           <img
-            src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\hero-img.png"
+            src="hero-img.png"
             alt="axel-avatar"
           />
         </div>
@@ -89,7 +89,7 @@
         <div class="about-me-container">
           <div class="about-me-image">
             <img
-              src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\about-me.jpeg"
+              src="about-me.jpeg"
               alt="about-me-image"
             />
           </div>
@@ -123,7 +123,7 @@
           <div class="skill-card">
             <div class="skill-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\html (1).png"
+                src="html (1).png"
                 alt=""
               />
             </div>
@@ -133,7 +133,7 @@
           <div class="skill-card">
             <div class="skill-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\css.png"
+                src="css.png"
                 alt=""
               />
             </div>
@@ -143,7 +143,7 @@
           <div class="skill-card">
             <div class="skill-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\js.png"
+                src="js.png"
                 alt=""
               />
             </div>
@@ -153,7 +153,7 @@
           <div class="skill-card">
             <div class="skill-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\bootstrap.png"
+                src="bootstrap.png"
                 alt=""
               />
             </div>
@@ -163,7 +163,7 @@
           <div class="skill-card">
             <div class="skill-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\java (1).png"
+                src="java (1).png"
                 alt=""
               />
             </div>
@@ -183,7 +183,7 @@
           <div class="project-card" onclick="furni()">
             <div class="project-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\furni-image.png"
+                src="furni-image.png"
                 alt=""
               />
             </div>
@@ -205,7 +205,7 @@
           <div class="project-card" onclick="archi()">
             <div class="project-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\archi-image.png"
+                src="archi-image.png"
                 alt=""
               />
             </div>
@@ -227,7 +227,7 @@
           <div class="project-card" onclick="finance()">
             <div class="project-image">
               <img
-                src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\images\finance-image.png"
+                src="finance-image.png"
                 alt=""
               />
             </div>
@@ -284,6 +284,6 @@
         </div>
       </div>
     </footer>
-    <script src="C:\Users\Axel Remojo\Desktop\portfolio ni axel\js\script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
